--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ body {
 
 }
 
-.bg-img .content > a {
+.bg-img .content>a {
 
     font-size: 1.3rem;
     color: var(--light);
@@ -231,7 +231,7 @@ body {
 .section5 .side h1 {
 
     text-decoration: none;
-    font-famil y: var(--txt);
+    font-family: var(--txt);
     font-size: 1.8rem;
 }
 
@@ -246,7 +246,11 @@ body {
 
     border: 2px solid grey;
 }
-.special{height: 100vh;}
+
+.special {
+    height: 100vh;
+}
+
 .special .wrapper1 {
     margin-top: 3rem;
     color: var(--primary);
@@ -285,23 +289,24 @@ body {
 
 
 
-.grid-wrapper .grid-item2{
-    
+.grid-wrapper .grid-item2 {
+
     grid-column: 2/4;
     grid-row: 1/3;
     padding: 0;
 }
 
-.grid-wrapper .grid-item2 h1,p{
-    
-    padding: 0 2rem; 
+.grid-wrapper .grid-item2 h1,
+p {
+
+    padding: 0 2rem;
 }
 
-.grid-wrapper .grid-item2 .img{
-    width:100%;
+.grid-wrapper .grid-item2 .img {
+    width: 100%;
     background: url(zpstock-image-156.jpg);
     background-size: contain;
     height: 325px;
     margin-top: 2rem;
-    
+
 }
