--- a/new_style.css
+++ b/new_style.css
@@ -1,6 +1,6 @@
 :root {
 
-	--prim_txt: red;
+	--prim_txt: rgb(230, 23, 23);
 	--sec-txt: rgb(196, 200, 207);
 	--dark: ;
 	--darkbg: rgb(25, 28, 35);
@@ -94,7 +94,7 @@ body section {
 
 #navbarNav ul .active a {
 
-	background-color: rgba(255, 0, 0, 0.5);
+	background-color: rgba(230, 23, 23, 0.5);
 	color: white !important;
 }
 
@@ -168,7 +168,7 @@ body section {
 
 .section2 .section2_wrapper .my_grid div:nth-child(odd) {
 
-	background-color: var(--prim_txt);
+	background-color: rgb(173, 43, 43);
 }
 
 .section2 .section2_wrapper .my_grid .my_item h1 {
