--- a/new_style.css
+++ b/new_style.css
@@ -168,7 +168,7 @@ body section {
 
 .section2 .section2_wrapper .my_grid div:nth-child(odd) {
 
-	background-color: rgb(217, 104, 104);
+	background-color: blue;
 }
 
 .section2 .section2_wrapper .my_grid .my_item h1 {
