--- a/new_style.css
+++ b/new_style.css
@@ -5,8 +5,7 @@
 	--dark: ;
 	--darkbg: rgb(25, 28, 35);
 	--boxgrey: #383a3d;
-	--box_red: red;
-	;
+	--box_red: rgb(240, 70, 70);
 }
 
 * {
@@ -168,7 +167,7 @@ body section {
 
 .section2 .section2_wrapper .my_grid div:nth-child(odd) {
 
-	background-color: blue;
+	background-color: var(--box_red)
 }
 
 .section2 .section2_wrapper .my_grid .my_item h1 {
@@ -195,6 +194,8 @@ body section {
 	margin: 0 0 4rem;
 }
 
+/*    reasons section of section 3 */
+
 .section3 .wrapper .reasons-wrapper {
 
 	height: auto;
@@ -216,5 +217,39 @@ body section {
 .section3 .wrapper .reasons-wrapper p {
 
 	font-size: 0.9rem;
+	color: var(--sec-txt);
+}
+
+/*    about Section of section 3 */
+.section3 .wrapper .about-tattoo>h1 {
+	color: var(--darkbg);
+	padding: 5px;
+	margin-bottom: 3rem;
+	text-align: center;
+	font-size: 2.5rem;
+	background-color: var(--box_red);
+	border-radius: 20px;
+
+}
+
+.section3 .wrapper .about-tattoo .about-wrapper div {
+
+	background-color: var(--boxgrey);
+	text-align: center;
+	border-radius: 20px;
+	margin-bottom: 2rem;
+	padding: 15px;
+}
+
+.section3 .wrapper .about-tattoo .about-wrapper div>h1 {
+
+	font-size: 1.5rem;
+	font-weight: bold;
+
+}
+
+.section3 .wrapper .about-tattoo .about-wrapper div>p {
+
+	font-size: 1rem;
 	color: var(--sec-txt);
 }
