--- a/new_style.css
+++ b/new_style.css
@@ -12,7 +12,7 @@
 	margin: 0;
 	box-sizing: border-box !important;
 	text-decoration: none !important;
-	font-family: sans-serif !important;
+	font-family: 'Lato', sans-serif !important;
 
 }
 
